# Thesis_APS-System

./: README.md
Engine/: Cargo.toml  build.rs
Engine/docs/: README.md  项目文档.md
Engine/examples/: client.rs
Engine/proto/: aps.proto
Engine/src/: async_job.rs  eval.rs  lib.rs  main.rs  model.rs  observability.rs  service.rs
Engine/src/alg/: baseline.rs  hybrid.rs  mod.rs  sa.rs
Engine/src/util/: time.rs
Engine/tests/: grpc_test.rs  integration_test.rs
aps-java/: .gitignore  pom.xml
aps-java/.docs/design/: IDE配置说明.md  gRPC集成完成总结.md  gRPC集成说明.md  grpc文档.md  快速测试指南.md  接口设计.md  数据库设计.md  目录树.md  项目描述.md
aps-java/.docs/design/shc/: 01-已完成功能.md  01-已完成功能清单.md  02-待完善功能.md  gRPC代码生成说明.md
aps-java/.sql/schema/: 05_schedule.sql  06_plan.sql
aps-java/.sql/test/: setup_matrix_test_data.sql
aps-java/bootstrap/: pom.xml
aps-java/bootstrap/src/main/java/com/aps/: ApsApplication.java
aps-java/bootstrap/src/main/resources/: application-dev.yml  application-prod.yml  application.yml  banner.txt  logback-spring.xml
aps-java/common/: pom.xml
aps-java/common/src/main/java/com/aps/entity/: BaseEntity.java
aps-java/da/: pom.xml
aps-java/da/src/main/resources/mapper/order/: ProductionOrderAttrMapper.xml  ProductionOrderMapper.xml  SalesOrderMapper.xml
aps-java/da/src/main/resources/mapper/plan/: MpsItemMapper.xml  MpsMapper.xml  MrpItemMapper.xml  MrpMapper.xml
aps-java/facade/: pom.xml
aps-java/grpc/: pom.xml
aps-java/grpc/src/main/resources/proto/: aps.proto
aps-java/model/: pom.xml
aps-java/service/: pom.xml
docs/: 前端接口.md  原型图设计.md  后端接口.md
(+341 files in other folders)
