[package]
name = "aps-engine"
version = "0.1.0"
edition = "2021"
[dependencies]
tonic = "0.9"
prost = "0.11"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.0", features = ["derive"] }
rand = "0.8"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.4", features = ["v4"] }
log = "0.4"
env_logger = "0.10"
sys-info = "0.9.1"
num_cpus = "1.17.0"

# ✅ 添加测试依赖
[dev-dependencies]
futures = "0.3"  # ✅ 并发测试需要
tokio = { version = "1.0", features = ["full", "test-util"] }

[build-dependencies]
tonic-build = "0.9"
